--- a/la3ib_web/.gitignore
+++ b/la3ib_web/.gitignore
@@ -11,6 +11,10 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
+# Environment
+.env
+.env.local
+.env.*.local
 
 # IntelliJ related
 *.iml
@@ -43,3 +47,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Markdown files
+*.md
