--- a/la3ib_web/pubspec.yaml
+++ b/la3ib_web/pubspec.yaml
@@ -33,30 +33,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_riverpod: ^2.5.1
-  riverpod_annotation: ^2.3.5
-  go_router: ^13.2.0
-  google_fonts: ^6.1.0
-  flutter_svg: ^2.0.10
-  json_annotation: ^4.8.1
-  flutter_localizations:
-    sdk: flutter
-  intl: ^0.20.2
-  freezed_annotation: ^3.1.0
-  google_sign_in: ^6.2.1
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  go_router: ^13.2.5
+  google_fonts: ^6.3.3
   firebase_core: ^4.4.0
   firebase_auth: ^6.1.4
   cloud_firestore: ^6.1.2
+  google_sign_in: ^6.3.0
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^3.0.0
-  build_runner: ^2.4.8
-  riverpod_generator: ^2.4.0
-  json_serializable: ^6.7.1
+  # Existing dev dependencies
+  build_runner: ^2.5.4
+  riverpod_generator: ^2.6.5
   freezed: ^3.1.0
+  json_serializable: ^6.9.5
+  flutter_lints: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -71,9 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
