--- a/la3ib_web/pubspec.yaml
+++ b/la3ib_web/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.2
+  intl: any
 
 dev_dependencies:
   # Existing dev dependencies
